Here is an overview of changes for each releases:

Release 0.?.? (200?-??-??)
--------------------------
- New: Outline view of keys.
- New: Option to hide key navigation in editor (in preferences).
- New: Can now filter keys to show only missing translations.

Release 0.7.5 (2006-04-22)
--------------------------
- Fix (bug #1455517): No more ArrayIndexOutOfBoundsException.
- Fix to work on Eclipse 3.2RC1.  Discussion at:
  http://sourceforge.net/forum/forum.php?thread_id=1477852&forum_id=442487

Release 0.7.4 (2006-02-09)
--------------------------
- New: Portuguese/Brazilian translation added.
- Fix (bug #1427638) Backslashes are no longer escaped when not converting
  unicode values.
- Fix (bug #1414470) Value with leading spaces now have the first leading space
  escaped when written to file.
- Fix (bug #1395662) Added missing Italian and Japanese languages files.
- Fix (bug #1359651) Fixed invalid parsing of escaped characters (e.g. \n\r\t)
  showing near the end of lines.
- Key navigation tree now independent of localized field scrolling
  (when there are too many for the screen).
- Added description to ResourceBundle wizard and fixed a few typos.

Release 0.7.3 (2005-12-17)
--------------------------
- New: Italian plugin translation added.
- New: Japanese plugin translation added.
- Fix (bug #1369313): No longer create separate editor instances when creating
  properties files.
- Fix (bug #1369312): Fixed an english typo.
- Fix (bug #1369272): Background for key.gif and keyCommented.gif now 
  transparent. 
- Fix (bug #1369267): The "New ResourceBundle" wizard no displays proper message
  when no folder is selected.  
- Fix (bug #1369260): The "variant" text field no longer appears squeezed on
  some platforms.

Release 0.7.2 (2005-10-21)
--------------------------
- New: Norwegian plugin translation added.
- Fix (bug #1312643 and #1326580): No longer drop some characters when saving.
- Fix (bug #1285026): SWT resources no longer leaking.